feat: add preloader

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
   <title>Star Wars - episodes</title>
+  <link rel="stylesheet" href="./css/loader.css">
   <script defer src="./js/main.js" type="module"></script>
 </head>
 <body>
